log
ju., 21 de abr. de 2022 11:29:14: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  3|8
total_score: 0/70
86c4f7b
ju., 21 de abr. de 2022 11:30:20: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:82:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
c21f3d2
ju., 21 de abr. de 2022 11:31:29: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  8|7
total_score: 10/70
1da280b
ju., 21 de abr. de 2022 11:45:07: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
b21557d
ju., 21 de abr. de 2022 12:03:55: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:54:18: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
      aux->parent = searchTreeMap(tree, key);
                  ^
cc1.exe: all warnings being treated as errors
Compilation failed
c7bd997
ju., 21 de abr. de 2022 12:07:05: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:55:18: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
      new->parent = searchTreeMap(tree, key);
                  ^
cc1.exe: all warnings being treated as errors
Compilation failed
a2675c0
ju., 21 de abr. de 2022 12:10:58: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:55:18: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
      new->parent = searchTreeMap(tree, key);
                  ^
cc1.exe: all warnings being treated as errors
Compilation failed
6a582e8
ju., 21 de abr. de 2022 12:15:00: 
 treemap.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:60:43: error: 'return' with a value, in function returning void [-Werror]
     }else {tree->current = aux; return aux->pair;}
                                        ~~~^~~~~~
treemap.c:50:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
treemap.c:51:16: error: unused variable 'new' [-Werror=unused-variable]
      TreeNode* new = createTreeNode(key, value);
                ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
5309230
sá., 23 de abr. de 2022 21:29:04: 
 treemap.c | 16 +++++-----------
 1 file changed, 5 insertions(+), 11 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:51:21: error: implicit declaration of function 'createNode' [-Werror=implicit-function-declaration]
     TreeNode* new = createNode(key, value);
                     ^~~~~~~~~~
treemap.c:51:21: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
treemap.c:55:17: error: expected identifier before ')' token
         if(new->)
                 ^
treemap.c:51:15: error: variable 'new' set but not used [-Werror=unused-but-set-variable]
     TreeNode* new = createNode(key, value);
               ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
5fd4d90
sá., 23 de abr. de 2022 21:29:41: 
 treemap.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  11|6
total_score: 15/70
8fef91f
sá., 23 de abr. de 2022 21:40:05: 
 treemap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:62:24: error: passing argument 1 of 'insertTreeMap' from incompatible pointer type [-Werror=incompatible-pointer-types]
          insertTreeMap(tree->root->left, key, value);
                        ^~~~
treemap.c:50:6: note: expected 'TreeMap * {aka struct TreeMap *}' but argument is of type 'TreeNode * {aka struct TreeNode *}'
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
treemap.c:65:19: error: comparison of distinct pointer types lacks a cast [-Werror]
     if(tree->root < value)
                   ^
cc1.exe: all warnings being treated as errors
Compilation failed
9b1d4c2
sá., 23 de abr. de 2022 21:58:14: 
 treemap.c | 28 ++++++++++------------------
 1 file changed, 10 insertions(+), 18 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:52:21: error: implicit declaration of function 'createNode' [-Werror=implicit-function-declaration]
     TreeNode* new = createNode(key, value);
                     ^~~~~~~~~~
treemap.c:52:21: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
treemap.c:63:43: error: 'return' with a value, in function returning void [-Werror]
     }else {tree->current = aux; return aux->pair;}
                                        ~~~^~~~~~
treemap.c:50:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
treemap.c:52:15: error: variable 'new' set but not used [-Werror=unused-but-set-variable]
     TreeNode* new = createNode(key, value);
               ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
836f85c
sá., 23 de abr. de 2022 22:15:23: 
 treemap.c | 17 +++++++++--------
 1 file changed, 9 insertions(+), 8 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:52:21: error: implicit declaration of function 'createNode' [-Werror=implicit-function-declaration]
     TreeNode* new = createNode(key, value);
                     ^~~~~~~~~~
treemap.c:52:21: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
treemap.c:53:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if (tree->root = NULL)
     ^~
cc1.exe: all warnings being treated as errors
Compilation failed
25ef9d1
sá., 23 de abr. de 2022 22:25:44: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:52:21: error: implicit declaration of function 'createNode' [-Werror=implicit-function-declaration]
     TreeNode* new = createNode(key, value);
                     ^~~~~~~~~~
treemap.c:52:21: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
treemap.c:53:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if (tree->root = NULL)
     ^~
cc1.exe: all warnings being treated as errors
Compilation failed
7614dc8
sá., 23 de abr. de 2022 22:28:02: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:52:21: error: implicit declaration of function 'createNode' [-Werror=implicit-function-declaration]
     TreeNode* new = createNode(key, value);
                     ^~~~~~~~~~
treemap.c:52:21: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
treemap.c:53:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if (tree->root = NULL)
     ^~
cc1.exe: all warnings being treated as errors
Compilation failed
99fa359
sá., 23 de abr. de 2022 22:29:01: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:52:21: error: implicit declaration of function 'createNode' [-Werror=implicit-function-declaration]
     TreeNode* new = createNode(key, value);
                     ^~~~~~~~~~
treemap.c:52:21: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
treemap.c:53:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if (tree->root = NULL)
     ^~
cc1.exe: all warnings being treated as errors
Compilation failed
38db827
sá., 23 de abr. de 2022 22:29:25: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:53:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if (tree->root = NULL)
     ^~
cc1.exe: all warnings being treated as errors
Compilation failed
3273241
sá., 23 de abr. de 2022 22:29:57: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
f2063b7
sá., 23 de abr. de 2022 22:30:22: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
0aad79b
sá., 23 de abr. de 2022 22:30:42: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  12|6
total_score: 15/70
933c189
sá., 23 de abr. de 2022 22:30:57: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|5
total_score: 25/70
b1e93d5
sá., 23 de abr. de 2022 22:52:37: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  13|5
total_score: 25/70
8c201c5
